# parity-game-rs

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  style.yml
example_diagrams/: rg_example.mmd  rg_pg_example.mmd  rg_pg_vertex_example.pg  rg_vertex_example.pg  rg_vertex_example_2.pg
extreme_games/: counter_ortl_14.pg  counter_ortl_8.pg  recursiveladder(1000).gm  recursiveladder(10000).gm  trivial_k1.pg
game_examples/: ActionConverter.tlsf.ehoa.pg  amba_decomposed_decode.tlsf.ehoa.pg  basic_paper_example.pg  ltl2dpa13.tlsf.ehoa.pg  pp_example.pg  rg_pg_vertex_origin.pg  trivial.pg  trivial_2.pg  tue_example.pg  two_counters_1.pg  two_counters_2.pg  two_counters_4.pg  very_simple_game.pg
logs/: TODO_FIGURE_OUT.md  two_counters_14_explicit_september_20th.txt  two_counters_14_july_1st_log.txt  two_counters_14_july_2nd_log.txt  two_counters_14_june_27th_log.txt  two_counters_14_september_1st_log.txt  two_counters_14_september_1st_log_opt_2.txt  two_counters_14_september_20th.txt  two_counters_14_september_2nd.txt  two_counters_14_september_3rd.txt  two_counters_14_srg_opt_log.txt  two_counters_14_tl_hack.txt  two_counters_1_one_hot_log.txt  two_counters_4_20_june.md  two_counters_4_srg_ei_opt_log.txt  two_counters_4_srg_ei_opt_variable_order.txt  two_counters_4_srg_ei_opt_variable_order_speed_mt.txt  two_counters_4_srg_ei_opt_variable_order_st.txt  two_counters_4_srg_log.txt  two_counters_8_explicit_edge.txt  variable_order_games.txt
pg_cli/: Cargo.toml
pg_cli/src/: main.rs  trace.rs  utils.rs
pg_cli/src/args/: bench.rs  convert.rs  mod.rs  solve.rs  testing.rs
pg_graph/: Cargo.toml
pg_graph/benches/: divan.rs  solvers.rs
pg_graph/src/: datatypes.rs  lib.rs  parity_game.rs  register_game.rs  symbolic.rs  visualize.rs
pg_graph/src/explicit/: mod.rs  parity_game.rs  pearce.rs  reduced_register_game.rs  register_game.rs  register_tree.rs  trace.rs
pg_graph/src/explicit/solvers/: fully_reduced_reg_zielonka.rs  mod.rs  priority_promotion.rs  qpt_liverpool.rs  qpt_tangle_liverpool.rs  qpt_tangle_zielonka.rs  qpt_zielonka.rs  register_zielonka.rs  small_progress.rs  tangle_learning.rs  zielonka.rs
pg_graph/src/solvers/: mod.rs  register_game.rs  small_progress.rs  symbolic_zielonka.rs  tangle_learning.rs  zielonka.rs
pg_graph/src/symbolic/: helpers.rs  mod.rs  oxidd_extensions.rs  parity_game.rs  register_game.rs  sat.rs
pg_graph/src/symbolic/register_game/: helpers.rs  mod.rs  test_helpers.rs  variable_order.rs
pg_graph/src/symbolic/register_game_one_hot/: helpers.rs  mod.rs  test_helpers.rs  variable_order.rs
pg_graph/src/symbolic/solvers/: mod.rs  symbolic_register_zielonka.rs  symbolic_zielonka.rs
pg_parser/: Cargo.toml
pg_parser/src/: lib.rs
