[package]
name = "pg_cli"
version = "0.1.0"
edition = "2021"
description = "Parity game solver"
repository = "https://github.com/Hirtol/parity-game-rs"
license = "MIT OR Apache-2.0"

[dependencies]
eyre.workspace = true
thiserror.workspace = true

simplelog = "0.12.2"
clap = { version = "4.5", features = ["derive", "env"] }

pg_graph = { path = "../pg_graph" }
pg_parser = { path = "../pg_parser"}
memory-stats = "1.1.0"