[package]
name = "pg_cli"
version = "0.1.0"
edition = "2021"
description = "Parity game solver"
repository = "https://github.com/Hirtol/parity-game-rs"
license = "MIT OR Apache-2.0"

[dependencies]
eyre.workspace = true
thiserror.workspace = true
tracing = { version = "0.1.40", features = ["log"] }

simplelog = "0.12.2"

clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17.8"
tracing-indicatif = "0.3.6"

pg_graph = { path = "../pg_graph" }
pg_parser = { path = "../pg_parser"}
memory-stats = "1.1.0"