[package]
name = "pg_cli"
version = "0.1.0"
edition = "2021"
description = "Parity game solver"
repository = "https://github.com/Hirtol/parity-game-rs"
license = "MIT OR Apache-2.0"

[features]
default = []
profiling-tracy = ["profiling/profile-with-tracy", "tracy-client"]
dhat-heap = []
verbose = ["pg_graph/verbose"]

[dependencies]
eyre.workspace = true
thiserror.workspace = true
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tracy-client = { version = "0.17", features = ["enable"], optional = true }
profiling = "1"

clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17.8"
tracing-indicatif = "0.3.6"
peak_alloc = "0.2.0"
dhat = "0.3.3"


csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcode = { version = "0.6.3", features = ["serde"] }
serde_with = "3.8"

regex = "1"
sysinfo = "0.33.0"

itertools.workspace = true

pg_graph = { path = "../pg_graph", features = [] }
pg_parser = { path = "../pg_parser" }
ahash = "0.8.11"