[package]
name = "pg_graph"
version = "0.1.0"
edition = "2021"
description = "Parity game solver"
repository = "https://github.com/Hirtol/parity-game-rs"
license = "MIT OR Apache-2.0"

[dependencies]
eyre.workspace = true
thiserror.workspace = true

aquamarine = "0.5.0"
ecow = "0.2.2"
ahash = "0.8.11"

tracing = { version = "0.1.40" }
itertools.workspace = true

petgraph = "0.6.4"
oxidd = { version = "0.6.0", default-features = false, features = ["manager-pointer", "bdd", "bcdd", "mtbdd", "zbdd", "multi-threading", "apply-cache-direct-mapped"] }
oxidd-core = "0.6.0"
oxidd-dump = "0.1.0"
oxidd-reorder = "0.1.0"

pg_parser = { path = "../pg_parser" }
profiling = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1.14"

[[bench]]
name = "solvers"
harness = false

[[bench]]
name = "divan"
harness = false