[package]
name = "pg_graph"
version = "0.1.0"
edition = "2021"
description = "Parity game solver"
repository = "https://github.com/Hirtol/parity-game-rs"
license = "MIT OR Apache-2.0"

[features]
statistics = ["oxidd-cache/statistics", "oxidd-rules-bdd/statistics", "oxidd/statistics"]

[dependencies]
eyre.workspace = true
thiserror.workspace = true

aquamarine = "0.5.0"
ecow = "0.2.2"
ahash = "0.8.11"
rayon = "1.10.0"

tracing = { version = "0.1.40" }
itertools.workspace = true

petgraph = "0.6.4"
oxidd = { git = "https://github.com/Hirtol/oxidd", default-features = false, features = ["manager-pointer", "bdd", "bcdd", "mtbdd", "zbdd", "multi-threading", "apply-cache-direct-mapped"] }
oxidd-rules-bdd = { git = "https://github.com/Hirtol/oxidd" }
oxidd-rules-zbdd = { git = "https://github.com/Hirtol/oxidd" }
oxidd-core = { git = "https://github.com/Hirtol/oxidd" }
oxidd-dump = { git = "https://github.com/Hirtol/oxidd" }
oxidd-reorder = { git = "https://github.com/Hirtol/oxidd" }
oxidd-cache = { git = "https://github.com/Hirtol/oxidd" }

#oxidd = { path = "../../../Git-Projects/oxidd/crates/oxidd", default-features = false, features = ["manager-pointer", "bdd", "bcdd", "mtbdd", "zbdd", "multi-threading", "apply-cache-direct-mapped"] }
#oxidd-rules-bdd = { path = "../../../Git-Projects/oxidd/crates/oxidd-rules-bdd" }
#oxidd-core = { path = "../../../Git-Projects/oxidd/crates/oxidd-core" }
#oxidd-dump = { path = "../../../Git-Projects/oxidd/crates/oxidd-dump" }
#oxidd-reorder = { path = "../../../Git-Projects/oxidd/crates/oxidd-reorder" }
#oxidd-cache = { path = "../../../Git-Projects/oxidd/crates/oxidd-cache" }

windows = { version = "0.58.0", features = ["Win32_System_Threading"] }

pg_parser = { path = "../pg_parser" }
profiling = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1.14"
tracing-test = "0.2.5"

#[[bench]]
#name = "solvers"
#harness = false

[[bench]]
name = "divan"
harness = false